# JINXUS

./: .env.example  .gitignore  Dockerfile  JINXUS_BLUEPRINT.md  README.md  develop_status.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  start.sh  stop.sh  sysprompt_ex.md
backend/: .dockerignore  .env.example  Dockerfile  daemon.sh  dev.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/daemon/: jinxus-frontend.plist  jinxus.plist
backend/data/: tool_graph_weights.json
backend/jinxus/: __init__.py
backend/jinxus/agents/: __init__.py  base_agent.py  jinxus_core.py  js_persona.py  jx_analyst.py  jx_coder.py  jx_cto.py  jx_marketing.py  jx_ops.py  jx_product.py  jx_researcher.py  jx_writer.py  personality.py  personas.py  soul_loader.py  state_tracker.py
backend/jinxus/api/: deps.py  server.py
backend/jinxus/channels/: cli.py  daemon.py  matrix_channel.py  telegram_bot.py
backend/jinxus/cli_engine/: __init__.py  agent_session.py  models.py  process_manager.py  prompt_builder.py  session_freshness.py  session_logger.py  session_manager.py  stream_parser.py
backend/jinxus/config/: __init__.py  mcp_servers.py  settings.py
backend/jinxus/core/: __init__.py  agent_executor.py  agent_messenger.py  agent_performance.py  approval_gate.py  artifact_store.py  autonomous_runner.py  background_worker.py  budget.py  checkpointer.py  collaboration.py  competitive_dispatch.py  completion_signals.py  config_revision.py  context_guard.py  context_summarizer.py  goals.py  (+35 more)
backend/scripts/: wavenote_login.py
(+327 files in other folders)
