[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jinxus"
version = "1.0.0"
description = "Multi-Agent AI Assistant System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "jinsoo96"}
]

[project.scripts]
jinxus = "jinxus.channels.cli:main"
jinxus-daemon = "jinxus.channels.daemon:main"

[tool.setuptools.packages.find]
include = ["jinxus", "jinxus.*"]
